plugins {
    id 'application'
    id("org.openjfx.javafxplugin") version "0.0.11"
}

application {
    mainClass = 'client.Main'
}

javafx {
    version = "21.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

java {
	sourceCompatibility = '21'
}

tasks.named('processResources') {
    onlyIf {
        !project.hasProperty('skipProcessResources')
    }
}

test {
	// Enable headless mode for JavaFX tests
	systemProperty 'java.awt.headless', 'true'
	systemProperty 'testfx.headless', 'true'
	systemProperty 'prism.order', 'sw'
	systemProperty 'prism.text', 't2k'
	systemProperty 'glass.platform', 'Monocle'
	systemProperty 'monocle.platform', 'Headless'

	jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage")
}

dependencies {
	implementation project(":commons")
	
	implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.0.3'
	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.3'
	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.0'
	
	implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
	
	implementation 'com.google.inject:guice:5.0.1'

	implementation 'org.openjfx:javafx-controls:17.0.2'
	implementation 'org.openjfx:javafx-fxml:17.0.2'

	implementation 'org.java-websocket:Java-WebSocket:1.5.6'

	implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
	implementation 'org.eclipse.angus:jakarta.mail:2.0.1'

	testImplementation "org.testfx:testfx-core:4.0.18"
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
	testImplementation "org.testfx:testfx-junit5:4.0.18"
	testImplementation 'org.testfx:openjfx-monocle:21.0.2'
	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
	testImplementation 'junit:junit:4.13.1'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
}